# lelang

./: .gitignore  Cargo.toml  README.md  a.out  compile.sh  compile_and_run.sh  compile_run.sh  leout  lexer_test.le  link_and_run.sh  main.le  out.S  out.ast  out.ll  out.token  print.c  print.ll  test.S  test.c  test.cpp  test.le  test.ll
.cargo/: config.toml
benches/: lexer.rs
benches/test_case/: lexer_test.le  parser_test.le
docs/: 404.html  book.js  book.toml  head.html  index.html  motivation.html  print.html  searcher.js  searchindex.js  searchindex.json
docs/branch/: branch.html  if.html
docs/compiler/: compiler.html  fibonacci.html  install.html
docs/css/: general.css  variables.css
docs/fonts/: fonts.css
docs/function/: def_and_call.html  extern.html  function.html
docs/loop/: for.html  loop.html  while.html
docs/src/: SUMMARY.md  head.md  motivation.md
docs/src/branch/: if.md
docs/src/compiler/: compiler.md  fibonacci.md  install.md
docs/src/function/: def_and_call.md  extern.md  function.md
docs/src/loop/: while.md
docs/src/test_sources/: array_initialize.le  invalid_conversion.le  invalid_conversion1.le
docs/src/type/: array.md  int_and_float.md  struct.md  type.md
docs/test_sources/: fibonacci.le  invalid_conversion.error  invalid_conversion1.error  struct_test.le
docs/type/: array.html  int_and_float.html  struct.html  type.html
runtime/: .clang-format  CMakeLists.txt  library.c
src/: arg_parser.rs  compiler.rs  error.rs  jit.rs  jit_compiler.rs  lexer.rs  lib.rs  main.rs  optimizer.rs  target.rs
src/analyzer/: mod.rs  type_checker.rs
src/ast/: ast.rs  mod.rs  nodes.rs
src/ast/parser/: anonymous_function.rs  array.rs  ast_parser.rs  common.rs  condition.rs  for_loop.rs  function_parser.rs  if_statement.rs  mod.rs  statement.rs  (+4 more)
src/code_gen/: builder.rs  mod.rs  optimizer.rs  symbol_table.rs  type_checker.rs
src/code_generator/: compile_context.rs  function.rs  generator.rs  mod.rs  symbol_table.rs
src/driver/: mod.rs  target.rs
src/error/: error_list.rs  le_error.rs  mod.rs
src/lexer/: mod.rs  number_parser.rs  string_literal_parser.rs  token_iterator.rs
src/optimizer/: mod.rs
(+43 files in other folders)
