[package]
name = "lelang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
exclude = ["benches"]

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name="lexer"
harness=false

[dependencies]
inkwell = { version = "0.1.0-beta.3", features = ["llvm13-0"] }
logos = "0.12.0"
thiserror = "1.0.30"
nom = "7.1.0"
clap = { version = "3.1.7", features = ["derive"] }
enum_dispatch = "0.3.8"
ariadne = "0.1.5"
atty = "0.2"
ptree = "0.4.0"
[build-dependencies]
cmake = "0.1.48"

[profile.release]
opt-level = 3
debug = false
lto = true
overflow-checks = false
rpath = false

